--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<html> <head> <title>Testing</title> </head> <body> <p>Testing</p> </body> </html>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Testing</title>
+    </head>
+    <body>
+        <p>Testing</p>
+    </body>
+</html>
