--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Testing</title>
+        <link rel="stylesheet" href="css/style.css">
+        <title>AvocadOS</title>
     </head>
     <body>
-        <p>Testing</p>
     </body>
 </html>
