Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 <p>The name, formerly <strong>jQueryOS</strong>, originates from a <a href="https://en.wikipedia.org/wiki/Meme">meme</a> on Programming Puzzles &amp; Code Golf</p>
 
 <blockquote>
-<p>i sad i try for thirry minut and no juic for avocad still no work<br>
-	 - PPCG</p>
+<p>i sad i try for thirry minut and no juic for avocad still no work</p>
+
+<p>	 - PPCG</p>
 </blockquote>
 
       <footer class="site-footer">
