Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -24,13 +24,22 @@
 <h3>
 <a id="the-name" class="anchor" href="#the-name" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The name?</h3>
 
-<p>The name, formerly <strong>jQueryOS</strong>, originates from a <a href="https://en.wikipedia.org/wiki/Meme">meme</a> on Programming Puzzles &amp; Code Golf</p>
+<p>The name, formerly <strong>jQueryOS</strong>, originates from a <a href="https://en.wikipedia.org/wiki/Meme">meme</a> on <a href="http://codegolf.stackexchange.com">Programming Puzzles &amp; Code Golf</a></p>
 
 <blockquote>
 <p>i sad i try for thirry minut and no juic for avocad still no work</p>
-
-<p>	 - PPCG</p>
 </blockquote>
+
+<h3>
+<a id="goals-of-avocados" class="anchor" href="#goals-of-avocados" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Goals of AvocadOS</h3>
+
+<p>AvocadOS is really great and does all things.</p>
+
+<ul>
+<li>jquery is the best quality code ever. If you don't use your an idiot</li>
+<li>only jquery, otherwise not enough jQuery!</li>
+<li>jQuery is definately the way to go</li>
+</ul>
 
       <footer class="site-footer">
 
