hello i have quetions how does juice an avocado i have try for thirtee minut and no juic

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <p>The name, formerly <strong>jQueryOS</strong>, originates from a <a href="https://en.wikipedia.org/wiki/Meme">meme</a> on <a href="http://codegolf.stackexchange.com">Programming Puzzles &amp; Code Golf</a></p>
 
 <blockquote>
-<p>i sad i try for thirry minut and no juic for avocad still no work</p>
+<p>hello i have quetions how does juice an avocado i have try for thirtee minut and no juic/p>
 </blockquote>
 
 <h3>
