--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name"><a class="project-name" href="https://github.com/jQueryOS">AvocadOS</a></h1>
+      <h1 class="project-name"><a class="project-name-href" href="https://github.com/jQueryOS" style="color:white" >AvocadOS</a></h1>
       <h2 class="project-tagline">A Revolutionary OS running jQuery</h2>
     </section>
 
