--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
                             <a href="#page-top"></a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#portfolio">Portfolio</a>
+                            <a href="#portfolio">Roadmap</a>
                         </li>
                         <li class="page-scroll">
                             <a href="#about">About</a>
                         </li>
-                        <li class="page-scroll">
-                            <a href="#contact">Contact</a>
-                        </li>
+                        <!--<li class="page-scroll">
+                            <a href="#contact"></a>
+                        </li>-->
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -324,7 +324,7 @@ red - not planned
             </div>
         </section>
 
-        <!-- Contact Section -->
+        <!-- Contact Section 
         <section id="contact">
             <div class="container">
                 <div class="row">
@@ -335,8 +335,6 @@ red - not planned
                 </div>
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
-                        <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                        <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
                         <form name="sentMessage" id="contactForm" novalidate>
                             <div class="row control-group">
                                 <div class="form-group col-xs-12 floating-label-form-group controls">
@@ -377,7 +375,7 @@ red - not planned
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-- Footer -->
         <footer class="text-center">
