--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                             <a href="#about">About</a>
                         </li>
                         <!--<li class="page-scroll">
-                            <a href="#contact"></a>
-                        </li>-->
+<a href="#contact"></a>
+</li>-->
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -251,23 +251,47 @@
                                 right: auto;
                             }
                         }
+                        .color-preview {
+                            border-radius: 4px;
+                            width: 25px;
+                            height: 25px;
+                            margin-right: 7px;
+                            margin-left: 1em;
+                            display: inline-block;
+                        }
+
+                        .colorpreviewbox {
+                            display: flex;
+                            align-content: center;
+                            text-align: center;
+                            justify-content: center
+                        }
                     </style>
                     <div class="timeline-container">
+                        <div>
+                            <p class="text-center colorpreviewbox">
+                                <span><span class="color-preview" style="background: #3f903f"></span>Completed</span>
+                                <span><span class="color-preview" style="background: #5bc0de"></span>In Development</span>
+                                <span><span class="color-preview" style="background: #f0ad4e"></span>Planned</span>
+                                <span><span class="color-preview" style="background: #d9534f"></span>Not Planned</span>
+                                <span><span class="color-preview" style="background: #999999"></span>Unknown</span>
+                            </p>
+                        </div>
                         <ul class="timeline">
                             <!-- li > div:nth(1).class { warning - orange danger - red  info - blue success - green } -->
                             <!--
-blue - In dev
-green - done
-orange - planned
-gray - unknown
-red - not planned
+Green - Done 
+Blue - In dev 
+Orange - Planned 
+Red - Not planned 
+Gray - Unknown
 -->
                             <li>
                                 <div class="timeline-badge info"><i class="fa fa-cogs"></i></div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
                                         <h4 class="timeline-title">Bootloader</h4>
-<!--  <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p> -->
+                                        <!--  <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p> -->
                                     </div>
                                     <div class="timeline-body">
                                         <p>The bootloader is the essential part of any operating system. Without it the operating system wouldn't even be able to boot</p>
@@ -276,13 +300,13 @@ red - not planned
                                     </div>
                                 </div>
                             </li>
-                            
-                             <li class="timeline-inverted">
+
+                            <li class="timeline-inverted">
                                 <div class="timeline-badge"><i class="fa fa-terminal"></i></div>
                                 <div class="timeline-panel">
                                     <div class="timeline-heading">
                                         <h4 class="timeline-title">Kernel / IPC</h4>
-<!--  <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p> -->
+                                        <!--  <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p> -->
                                     </div>
                                     <div class="timeline-body">
                                         <p>IPC or <b>Inter-Process Communication</b> is the mechanisms which allows processes, hosted by the OS, to communicate with either the kernel, or seperate process themselves.</p>
@@ -325,57 +349,57 @@ red - not planned
         </section>
 
         <!-- Contact Section 
-        <section id="contact">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <h2>Contact Me</h2>
-                        <hr class="star-primary">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <form name="sentMessage" id="contactForm" novalidate>
-                            <div class="row control-group">
-                                <div class="form-group col-xs-12 floating-label-form-group controls">
-                                    <label>Name</label>
-                                    <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="row control-group">
-                                <div class="form-group col-xs-12 floating-label-form-group controls">
-                                    <label>Email Address</label>
-                                    <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="row control-group">
-                                <div class="form-group col-xs-12 floating-label-form-group controls">
-                                    <label>Phone Number</label>
-                                    <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="row control-group">
-                                <div class="form-group col-xs-12 floating-label-form-group controls">
-                                    <label>Message</label>
-                                    <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <br>
-                            <div id="success"></div>
-                            <div class="row">
-                                <div class="form-group col-xs-12">
-                                    <button type="submit" class="btn btn-success btn-lg">Send</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section> -->
+<section id="contact">
+<div class="container">
+<div class="row">
+<div class="col-lg-12 text-center">
+<h2>Contact Me</h2>
+<hr class="star-primary">
+</div>
+</div>
+<div class="row">
+<div class="col-lg-8 col-lg-offset-2">
+<form name="sentMessage" id="contactForm" novalidate>
+<div class="row control-group">
+<div class="form-group col-xs-12 floating-label-form-group controls">
+<label>Name</label>
+<input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+<p class="help-block text-danger"></p>
+</div>
+</div>
+<div class="row control-group">
+<div class="form-group col-xs-12 floating-label-form-group controls">
+<label>Email Address</label>
+<input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+<p class="help-block text-danger"></p>
+</div>
+</div>
+<div class="row control-group">
+<div class="form-group col-xs-12 floating-label-form-group controls">
+<label>Phone Number</label>
+<input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+<p class="help-block text-danger"></p>
+</div>
+</div>
+<div class="row control-group">
+<div class="form-group col-xs-12 floating-label-form-group controls">
+<label>Message</label>
+<textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+<p class="help-block text-danger"></p>
+</div>
+</div>
+<br>
+<div id="success"></div>
+<div class="row">
+<div class="form-group col-xs-12">
+<button type="submit" class="btn btn-success btn-lg">Send</button>
+</div>
+</div>
+</form>
+</div>
+</div>
+</div>
+</section> -->
 
         <!-- Footer -->
         <footer class="text-center">
@@ -409,46 +433,46 @@ red - not planned
                         <div class="footer-col col-md-4">
                             <h3>About AvocadOS</h3>
                             <p>random filler text, remind me to fix this later</a>.</p>
-                        </div>
-                    </div>
                 </div>
             </div>
-            <div class="footer-below">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            Copyright &copy; jQueryOS 2016
-                        </div>
-                    </div>
-                </div>
             </div>
-        </footer>
-
-        <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-        <div class="scroll-top page-scroll visible-xs visible-sm">
-            <a class="btn btn-primary" href="#page-top">
-                <i class="fa fa-chevron-up"></i>
-            </a>
         </div>
+    <div class="footer-below">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    Copyright &copy; jQueryOS 2016
+                </div>
+            </div>
+        </div>
+    </div>
+    </footer>
 
-        <!-- jQuery -->
-        <script src="js/jquery.js"></script>
+<!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
+<div class="scroll-top page-scroll visible-xs visible-sm">
+    <a class="btn btn-primary" href="#page-top">
+        <i class="fa fa-chevron-up"></i>
+    </a>
+</div>
 
-        <!-- Bootstrap Core JavaScript -->
-        <script src="js/bootstrap.min.js"></script>
+<!-- jQuery -->
+<script src="js/jquery.js"></script>
 
-        <!-- Plugin JavaScript -->
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-        <script src="js/classie.js"></script>
-        <script src="js/cbpAnimatedHeader.js"></script>
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
 
-        <!-- Contact Form JavaScript -->
-        <script src="js/jqBootstrapValidation.js"></script>
-        <script src="js/contact_me.js"></script>
+<!-- Plugin JavaScript -->
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+<script src="js/classie.js"></script>
+<script src="js/cbpAnimatedHeader.js"></script>
 
-        <!-- Custom Theme JavaScript -->
-        <script src="js/freelancer.js"></script>
+<!-- Contact Form JavaScript -->
+<script src="js/jqBootstrapValidation.js"></script>
+<script src="js/contact_me.js"></script>
 
-    </body>
+<!-- Custom Theme JavaScript -->
+<script src="js/freelancer.js"></script>
+
+</body>
 
 </html>
