more things on roadmap

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ Gray - Unknown
                             </ul>
                         </div>
                         <div class="footer-col col-md-4">
-                            <h3>About AvocadOS</h3>
+                            <h3 style="font-variant: small-caps;text-transform: none;">ABOUT AvocadOS</h3>
                             <p>random filler text, remind me to fix this later</a>.</p>
                 </div>
             </div>
