centered the stuff

--- a/index.html
+++ b/index.html
@@ -266,6 +266,10 @@
                             text-align: center;
                             justify-content: center
                         }
+                        
+                        .colorpreviewbox > span {
+                            display: flex;
+                        }
                     </style>
                     <div class="timeline-container">
                         <div>
