--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="col-lg-12">
                         <img class="img-responsive" src="img/profile.svg" alt="">
                         <div class="intro-text">
-                            <a style="color:black;" href="https://github.com/jQueryOS/AvocadOS"><span class="name">AvocadOS</span></a>
+                            <a style="color:rgb(108,78,19);" href="https://github.com/jQueryOS/AvocadOS"><span class="name">AvocadOS</span></a>
                             <hr class="star-light">
                             <span class="skills">A Revolutionary Operating System Running jQuery</span>
                         </div>
